# Cool-Context-Creator

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md
Doc/: Portable-context-marking.doxyfile
Samples/: CMakeLists.txt
Samples/C3/: CMakeLists.txt
Samples/C3/FullScreen/: CMakeLists.txt  main.cpp
Samples/C3/OpenGL1/: CMakeLists.txt  main.cpp
Samples/C3/OpenGL2/: CMakeLists.txt  main.cpp
Samples/C3/OpenGL3/: CMakeLists.txt  main.cpp  test.fs  test.vs
Samples/C3/OpenGL4/: CMakeLists.txt  Geodesic.cpp  Geodesic.glsl
Samples/C3/OpenGL4/lib/glsw/: glsw.c
Samples/NeheLinux/: CMakeLists.txt  lesson01.c
Samples/NeheWin/: CMakeLists.txt  Lesson1.cpp
Samples/OpenGL2/: CMakeLists.txt  main.cpp
Samples/OpenGL4/: CMakeLists.txt  Geodesic.cpp
Samples/OpenGL4/lib/libpez/: pez.h  pez.linux.cpp  pez.windows.cpp
Samples/Other/: CMakeLists.txt
Samples/Other/NeheLinux/: CMakeLists.txt
Samples/Other/NeheWin/: CMakeLists.txt
Samples/Other/WikiOpenGLLinux/: CMakeLists.txt
Samples/WikiOpenGLLinux/: main.cpp
Source/: CMakeLists.txt  OpenGLContextSettings.h  Trace.h  Window.cpp  Window.h  WindowImpl.cpp  WindowImpl.h  WindowMode.h
Source/C3/: Clock.cpp  Clock.h  Config.h  Events.h  Exceptions.cpp  Exceptions.h  OpenGLContextSettings.h  Trace.h  Window.cpp  Window.h  WindowHandle.h  WindowImpl.cpp  WindowImpl.h  WindowMode.h
Source/C3/Linux/: WindowImplLinux.cpp  WindowImplLinux.h
Source/C3/Win32/: WindowImplWin32.cpp  WindowImplWin32.h
Source/Linux/: WindowImplLinux.cpp  WindowImplLinux.h
Source/PCM/: Clock.cpp  Clock.h  Config.h  Events.h  Exceptions.cpp  Exceptions.h  OpenGLContextSettings.h  Trace.h  Window.cpp  Window.h  WindowImpl.cpp  WindowImpl.h  WindowMode.h
Source/PCM/Linux/: WindowImplLinux.cpp  WindowImplLinux.h
Source/PCM/Win32/: WindowImplWin32.cpp  WindowImplWin32.h
Source/Win32/: WindowImplWin32.cpp  WindowImplWin32.h
