SET(OpenGL2Test_SRC
	main.cpp
)


INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}
	../../Source
)

ADD_EXECUTABLE(OpenGL2Test ${OpenGL2Test_SRC})

target_link_libraries(
  OpenGL2Test
  C3
)

SET_TARGET_PROPERTIES(OpenGL2Test PROPERTIES
  INSTALL_RPATH ${PROJECT_BUILD_PATH}
  INSTALL_RPATH_USE_LINK_PATH true
)

install(TARGETS OpenGL2Test RUNTIME DESTINATION ${PROJECT_BUILD_PATH})