SET(OpenGL1Test_SRC
	main.cpp
)


INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}
	../../../Source
)

ADD_EXECUTABLE(OpenGL1Test ${OpenGL1Test_SRC})

target_link_libraries(
  OpenGL1Test
  C3
)

SET_TARGET_PROPERTIES(OpenGL1Test PROPERTIES
  INSTALL_RPATH ${PROJECT_BUILD_PATH}
  INSTALL_RPATH_USE_LINK_PATH true
)

install(TARGETS OpenGL1Test RUNTIME DESTINATION ${PROJECT_BUILD_PATH})