SET(OpenGL3Test_SRC
	main.cpp
)


INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}
	../../../Source
)

ADD_EXECUTABLE(OpenGL3Test ${OpenGL3Test_SRC})

target_link_libraries(
  OpenGL3Test
  C3
)

SET_TARGET_PROPERTIES(OpenGL3Test PROPERTIES
  INSTALL_RPATH ${PROJECT_BUILD_PATH}
  INSTALL_RPATH_USE_LINK_PATH true
)

install(TARGETS OpenGL3Test RUNTIME DESTINATION ${PROJECT_BUILD_PATH})