SET(NeheWin_SRC
	Lesson1.cpp
)


INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}
	../../Source
)

ADD_EXECUTABLE(NeheWin ${NeheWin_SRC})

target_link_libraries(
  NeheWin
  ${OPENGL_LIBRARY}
)

SET_TARGET_PROPERTIES(NeheWin PROPERTIES
  INSTALL_RPATH ${PROJECT_BUILD_PATH}
  INSTALL_RPATH_USE_LINK_PATH true
)

install(TARGETS NeheWin RUNTIME DESTINATION ${CMAKE_BINARY_DIR})